--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Welcome to my Virtual Terrarium</title>
+		<title>Welcome to my Virtual Cat Tree/title>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,7 @@
 	</head>
 <body>
   <div id="page">
-    <h1>My Terrarium</h1>
+    <h1>My Cat Tree</h1>
 
     <div id="left-container" class="container">
       <div class="plant-holder">
