Fix div ID for cat tree in index.html
Signed-off-by: Bosy-Rimma <rimma.bosomworth@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div id="terrarium">
+    <div id="cat tree">
       <div class="jar-top"></div>
       <div class="jar-walls">
         <div class="jar-glossy-long"></div>
